Bugfix: Fixed z-index for Dialog component (#3661)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Dialog/dialog.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Dialog/dialog.scss
@@ -21,6 +21,7 @@ $transitionDuration: 300ms;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 
     & > * {
         opacity: 0;
